@@ -1,11 +1,11 @@
-.TH SG_LUNS "8" "March 2007" "sg3_utils\-1.24" SG3_UTILS
+.TH SG_LUNS "8" "April 2008" "sg3_utils\-1.26" SG3_UTILS
 .SH NAME
 sg_luns \- send the SCSI REPORT LUNS command
 .SH SYNOPSIS
 .B sg_luns
-[\fI\-\-decode\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-quiet\fR]
-[\fI\-\-raw\fR] [\fI\-\-select=SR\fR] [\fI\-\-verbose\fR] [\fI\-\-version\fR]
-\fIDEVICE\fR
+[\fI\-\-decode\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-maxlen=LEN\fR]
+[\fI\-\-quiet\fR] [\fI\-\-raw\fR] [\fI\-\-select=SR\fR] [\fI\-\-verbose\fR]
+[\fI\-\-version\fR] \fIDEVICE\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
@@ -24,6 +24,11 @@ output the usage message then exit.
 .TP
 \fB\-H\fR, \fB\-\-hex\fR
 output response to this command in ASCII hex.
+.TP
+\fB\-m\fR, \fB\-\-maxlen\fR=\fILEN\fR
+where \fILEN\fR is the (maximum) response length in bytes. It is placed in
+the cdb's "allocation length" field. If not given (or \fILEN\fR is zero)
+then 65536 is used. The maximum value of \fILEN\fR is 65536.
 .TP
 \fB\-q\fR, \fB\-\-quiet\fR
 output ASCII hex rendering of each report lun, one per line.
@@ -64,7 +69,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2004\-2007 Douglas Gilbert
+Copyright \(co 2004\-2008 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
