@@ -25,7 +25,7 @@
 #include "sg_lib.h"
 #include "sg_pt.h"
 
-#define SG_RAW_VERSION "0.3.5 (2007-08-20)"
+#define SG_RAW_VERSION "0.3.6 (2008-04-17)"
 
 #define DEFAULT_TIMEOUT 20
 #define MIN_SCSI_CDBSZ 6
@@ -66,7 +66,8 @@ struct opts_t {
     int do_version;
 };
 
-static void version()
+static void
+version()
 {
     fprintf(stderr,
             "sg_raw " SG_RAW_VERSION "\n"
@@ -78,7 +79,8 @@ static void version()
             "There is NO WARRANTY, to the extent permitted by law.\n");
 }
 
-static void usage()
+static void
+usage()
 {
     fprintf(stderr,
             "Usage: sg_raw [OPTION] DEVICE CDB0 CDB1 ...\n"
@@ -87,15 +89,15 @@ static void usage()
             "  -b, --binary           Dump data in binary form, even when "
             "writing to stdout\n"
             "  -h, --help             Show this message and exit\n"
-            "  -i, --infile=FILE      Read data to send from FILE (default: "
+            "  -i, --infile=IFILE     Read data to send from IFILE (default: "
             "stdin)\n"
             "  -k, --skip=LEN         Skip the first LEN bytes when reading "
             "data to send\n"
             "  -n, --nosense          Don't display sense information\n"
-            "  -o, --outfile=FILE     Write data to FILE (default: hexdump "
+            "  -o, --outfile=OFILE    Write data to OFILE (default: hexdump "
             "to stdout)\n"
-            "  -r, --request=LEN      Request up to LEN bytes of data\n"
-            "  -s, --send=LEN         Send LEN bytes of data\n"
+            "  -r, --request=RLEN     Request up to RLEN bytes of data\n"
+            "  -s, --send=SLEN        Send SLEN bytes of data\n"
             "  -t, --timeout=SEC      Timeout in seconds (default: 20)\n"
             "  -v, --verbose          Increase verbosity\n"
             "  -V, --version          Show version information and exit\n"
@@ -107,7 +109,8 @@ static void usage()
             "  sg_raw -r 1k /dev/sg0 12 00 00 00 60 00\n");
 }
 
-static int process_cl(struct opts_t *optsp, int argc, char *argv[])
+static int
+process_cl(struct opts_t *optsp, int argc, char *argv[])
 {
     while (1) {
         int c, n;
@@ -223,7 +226,8 @@ static int process_cl(struct opts_t *optsp, int argc, char *argv[])
     return 0;
 }
 
-static int skip(int fd, off_t offset)
+static int
+skip(int fd, off_t offset)
 {
     off_t remain;
     char buffer[512];
@@ -253,7 +257,8 @@ static int skip(int fd, off_t offset)
     return 0;
 }
 
-static unsigned char *fetch_dataout(struct opts_t *optsp)
+static unsigned char *
+fetch_dataout(struct opts_t *optsp)
 {
     unsigned char *buf = NULL;
     int fd, len;
@@ -303,7 +308,8 @@ bail:
     return buf;
 }
 
-static int write_dataout(const char *filename, unsigned char *buf, int len)
+static int
+write_dataout(const char *filename, unsigned char *buf, int len)
 {
     int ret = SG_LIB_CAT_OTHER;
     int fd;
@@ -331,7 +337,8 @@ bail:
     return ret;
 }
 
-int main(int argc, char *argv[])
+int
+main(int argc, char *argv[])
 {
     int ret = 0;
     int res_cat;
